--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,31 @@
             <artifactId>log4j-core</artifactId>
             <version>3.0.0-beta2</version>
         </dependency>
+        <!-- allure-maven -->
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-maven</artifactId>
+            <version>2.12.0</version>
+        </dependency>
+        <!-- allure-grpc -->
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-grpc</artifactId>
+            <version>2.27.0</version>
+        </dependency>
+        <!-- javafaker -->
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.10.2</version>
+            <scope>compile</scope>
+        </dependency>
+
 
     </dependencies>
     <build>
