--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,7 @@
     <artifactId>MavenJenksOps</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
-        <!-- testng -->
-        <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>7.10.2</version>
-            <scope>test</scope>
-        </dependency>
+
         <!-- owner -->
         <dependency>
             <groupId>org.aeonbits.owner</groupId>
@@ -33,17 +27,17 @@
             <artifactId>selenium-java</artifactId>
             <version>4.21.0</version>
         </dependency>
-        <!--log4j-core -->
+        <!-- log4j-core -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
             <version>3.0.0-beta2</version>
         </dependency>
-        <!-- allure-maven -->
+        <!-- allure-testng -->
         <dependency>
             <groupId>io.qameta.allure</groupId>
-            <artifactId>allure-maven</artifactId>
-            <version>2.12.0</version>
+            <artifactId>allure-testng</artifactId>
+            <version>2.27.0</version>
         </dependency>
         <!-- allure-grpc -->
         <dependency>
@@ -57,17 +51,24 @@
             <artifactId>javafaker</artifactId>
             <version>1.0.2</version>
         </dependency>
+        <!-- TestNG -->
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.10.2</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>7.10.2</version>
             <scope>compile</scope>
         </dependency>
-
-
     </dependencies>
+
     <build>
         <plugins>
+            <!-- Maven Compiler Plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -77,11 +78,21 @@
                     <target>17</target>
                 </configuration>
             </plugin>
+            <!-- Allure Maven Plugin -->
             <plugin>
                 <groupId>io.qameta.allure</groupId>
                 <artifactId>allure-maven</artifactId>
                 <version>2.10.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>report</goal>
+                            <goal>serve</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
+            <!-- Maven Surefire Plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -91,7 +102,7 @@
                         <suiteXmlFile>testng.xml</suiteXmlFile>
                     </suiteXmlFiles>
                     <systemPropertyVariables>
-                        <allure.results.directory>${basedir}/target/allure-results</allure.results.directory>
+                        <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>
                         <allure.link.issue.pattern>https://example.org/issue/{}</allure.link.issue.pattern>
                         <allure.link.tms.pattern>https://example.org/tms/{}</allure.link.tms.pattern>
                     </systemPropertyVariables>
@@ -99,10 +110,10 @@
             </plugin>
         </plugins>
     </build>
+
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
 </project>
